[metadata]
name = pip_bug
author = Justin Furuness
version = 0.0.1

[options]
python_requires = >= 3.7
packages = find:
install_requires =
    lib_caida_collector @ git+https://github.com/jfuruness/lib_caida_collector.git#65daee2120c6165a90914e1fe9c17930b6ca0477

[options.extras_require]
test = 
    lib_caida_collector @ git+https://github.com/jfuruness/lib_caida_collector.git#65daee2120c6165a90914e1fe9c17930b6ca0477
